# ospsd-hw1-python

./: .coverage  LICENSE  README.md  componenent.md  component.md  pull_request_template.md  pyproject.toml  pytest.ini
.circleci/: config.yml
hw2-inbox/: README.md  __init__.py  gmail_client.py  pyproject.toml
hw2-inbox/implentation/: pyproject.toml
hw2-inbox/interface/: pyproject.toml
hw2-inbox/interface/src/interface/: gmail_client_interface.py
hw2-inbox/tests/: test_hw2_inbox.py
src/: __init__.py  logger.py
src/calculator/: __init__.py  pyproject.toml  setup.py  test_calculator.py
src/calculator/calculator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/logger/: __init__.py  logger.py  pyproject.toml  test_logger.py
src/logger/logger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/notifier/: __init__.py  notifier.py  pyproject.toml  test_notifier.py
src/notifier/notifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test-results/: report.html  results.xml
tests/end_to_end/: test_e2e.py
tests/integration/: test_calc_logger_integration.py  test_calc_notifier_integration.py
tests/unit/: test_calculator.py  test_logger.py  test_notifier.py
