[project]
name = "Gmail-inbox-client"
version = "0.1.0"
description = "A Python-based Gmail inbox client for managing and interacting with email messages."
dependencies = [
    "uv", 
    "pytest",  
    "coverage",
    "mypy",
    "ruff"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "types-setuptools>=42.0.0"
]

[tool.ruff.lint]
ignore = ["D203", "D213"] 
select = ["D", "E", "F", "ANN", "UP", "TRY", "EM"]

[tool.mypy]
strict = true

[build-system]
requires = ["setuptools>=42.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "test_*.py"]

