[build-system]
requires = ["uv"]
build-backend = "uv.build"

[project]
name = "Gmail-inbox-client"
version = "0.1.0"
description = "A Python-based Gmail inbox client for managing and interacting with email messages."
readme = "README.md"
requires-python = ">=3.9"

[tool.uv.sources]
interface = { path = "./interface" }
implementation = { path = "./implementation" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.0.0",
    "ruff>=0.3.0"
]

[tool.uv.workspace]
members = ["interface", "implementation"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = ["test_.*\\.py$"]
