[project]
name = "implementation"
version = "0.1.0"
description = "Gmail client implementation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["interface"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
