[project]
name = "logger"
version = "0.1.0"
description = "A simple logger."
dependencies = [
    "uv",  
    "pytest",  
    "coverage",
    "ruff",
    "mypy"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "types-setuptools>=42.0.0"
]


[tool.ruff.lint]
ignore = ["D203", "D213"] 
select = ["D", "E", "F", "ANN", "UP", "TRY", "EM"]



[tool.mypy]
strict = true

[build-system]
requires = ["setuptools>=42.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]